# tkasm

./: intructionSet_Tkasm.txt
TK_lanuague_One/: CMakeLists.txt  TK_lanuague_One.sln  main.c  main.tkasm
TK_lanuague_One/Interpreter/: Interpreter.c
TK_lanuague_One/TK_lanuague_One/: Commands.cpp  Commands.h  TK_lanuague_One.cpp  TK_lanuague_One.vcxproj  TK_lanuague_One.vcxproj.filters  TkasmType.h  Type.cpp  Types.h  console.cpp  console.h  debug.cpp  debug.h  fileReader.cpp  fileReader.h  genaralTypes.cpp  generalTypes.h  greaterSmallerJump.tkasm  interpreter.cpp  interpreter.h  main.tkasm  metaData.h  operators.cpp  operators.h  printAdd.tkasm  readInputLoop.tkasm  stack.cpp  stack.h  stringTools.cpp  stringTools.h  testCode.tkasm  testJumpEq0.tkasm  tester.tkasm  tokenizer.cpp  tokenizer.h
TK_lanuague_One/lib/ArrayList/: ArrayList.c  ArrayList.h
TK_lanuague_One/lib/HashMap/: map.c
TK_lanuague_One/lib/Stack/: Stack.c  Stack.h
TK_lanuague_One/lib/StringStream/: StringStream.c  StringStream.h
TK_lanuague_One/lib/fileReader/: fileReader.c
TK_lanuague_One/lib/string/: String.c  String.h
TK_lanuague_One/lib/stringTools/: stringTools.c  stringTools.h
TK_lanuague_One/metaData/: TkasmTypes.h  Types.h
TK_lanuague_One/metaData/Commands/: commands.c  commands.h
TK_lanuague_One/metaData/generalType/: generalType.c  generalType.h
TK_lanuague_One/metaData/generalType/console/: console.c  console.h
TK_lanuague_One/metaData/generalType/operators/: operators.c
TK_lanuague_One/metaData/memory/stack/: stackMemory.c  stackMemory.h
TK_lanuague_One/test_exe/: main.tkasm
TK_lanuague_One/tokenizer/: mainTokenizer.c  mainTokenizer.h
tkasm/: README.md  main.py  main.tkasm
tkasm/assets/: Types.py  command.py  metaData.py  tkasmCompiler.py  tkasmTokenizer.py
tkasm/assets/compile/: compileTools.py  string.py
tkasm/assets/tools/: strTools.py
tkasm/compiled/: lib.asm  main  main.asm  printHelloWorld.asm
tkin/: .gitignore  CMakeLists.txt  main.c  main.tkasm
tkin/Interpreter/: Interpreter.c  Interpreter.h
tkin/lib/ArrayList/: ArrayList.c  ArrayList.h
tkin/lib/HashMap/: map.h
tkin/lib/Stack/: Stack.c  Stack.h
tkin/lib/Stream/: Stream.c  Stream.h
tkin/lib/StringStream/: StringStream.c  StringStream.h
tkin/lib/fileReader/: fileReader.c  fileReader.h
tkin/lib/string/: String.c
tkin/lib/stringTools/: stringTools.c  stringTools.h
tkin/metaData/: TkasmTypes.h
tkin/metaData/Commands/: commands.c  commands.h
tkin/metaData/generalType/: generalType.c  generalType.h
tkin/metaData/generalType/console/: console.c
tkin/metaData/generalType/operators/: operators.c  operators.h
tkin/metaData/memory/stack/: stackMemory.c  stackMemory.h
tkin/tokenizer/: mainTokenizer.c  mainTokenizer.h
